/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.1.0/userguide/building_java_projects.html in the Gradle documentation.
 * This project uses @Incubating APIs which are subject to change.
 */

buildscript {
    dependencies {
        classpath 'org.yaml:snakeyaml:2.5'
        classpath 'org.postgresql:postgresql:42.7.8'
        classpath 'org.flywaydb:flyway-database-postgresql:11.20.0'
    }
}

plugins {
    id 'application'
    id 'java'
    id 'com.diffplug.spotless' version '8.1.0'
    id 'org.flywaydb.flyway' version '11.20.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // from personal library
    implementation 'io.github.bibekaryal86:shdsvc:1.0.12'
    // others
    implementation 'io.netty:netty-all:4.2.5.Final'

    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.22'
    implementation 'com.zaxxer:HikariCP:7.0.2'

    runtimeOnly 'org.postgresql:postgresql:42.7.8'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.20.0'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:6.0.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.0.1'
    testImplementation 'org.mockito:mockito-core:5.21.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
    testImplementation 'org.flywaydb:flyway-core:11.20.0'
    testImplementation 'org.flywaydb:flyway-database-postgresql:11.20.0'
    testImplementation 'io.zonky.test:embedded-postgres:2.2.0'
    testImplementation enforcedPlatform('io.zonky.test.postgres:embedded-postgres-binaries-bom:17.7.0')
}

application {
    // Define the main class for the application.
    mainClass = 'budget.application.Main'
}

application {
    mainClass = 'budget.application.Main'
}

test {
    useJUnitPlatform()
}

jar {
    archiveFileName = 'budget-service.jar'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes "Main-Class": "budget.application.Main"
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

spotless {
    java {
        removeUnusedImports()
        googleJavaFormat()
    }
}

// everything below is for local development only
import org.yaml.snakeyaml.Yaml

def loadAppCredentialsEnvVariables() {
    def file = file('../gcp/app-credentials.yaml')
    if (file.exists()) {
        def data = new Yaml().load(file.text)
        def properties = new Properties()

        if (data?.env_variables) {
            data.env_variables.each { key, value ->
                if (key != 'ENV_SERVER_PORT') {
                    properties.setProperty(key, value)
                }
            }
        }
        return properties
    } else {
        println "Warning: app-credentials.yaml file not found!"
        return new Properties()
    }
}

def yamlProperties = loadAppCredentialsEnvVariables()
def isGithubActions = System.getenv('CI') == 'true'

flyway {
    locations = ['classpath:db/migration']
    schemas = ['public']

    // for local development, use SANDBOX DB
    def db_host = yamlProperties.getProperty('DB_HOST_SANDBOX')
    def db_name = yamlProperties.getProperty('DB_NAME_SANDBOX')

    if (db_host && db_name) {
        url = "jdbc:postgresql://${db_host}:5432/${db_name}"
        user = yamlProperties.getProperty('DB_USERNAME_SANDBOX')
        password = yamlProperties.getProperty('DB_PASSWORD_SANDBOX')
    } else if (!isGithubActions) {
        throw new GradleException("Flyway DB Host and Name Configuration Error...")
    } else {
        println "Flyway DB Host and Name Configuration Warning..."
    }
}

run {
    doFirst {
        yamlProperties.each { key, value ->
            if (key == 'SPRING_PROFILES_ACTIVE') {
                environment key, 'sandbox'
            } else {
                environment key, value
            }
        }
    }
}
